# Distributed-accelerometer-data-processing-system

./: CMakeLists.txt  README.md
include/: client_interface.hpp  logger.hpp
include/node_a/: client_a.hpp  packet.hpp  sensor_emulator.hpp  serializer.hpp
include/node_b/: client_b.hpp
include/server/: error_type.hpp  server.hpp  session.hpp  socket_type.hpp
src/: logger.cpp  main.cpp  main_client_a.cpp  main_client_b.cpp
src/node_a/: client_a.cpp  packet.cpp  sensor_emulator.cpp  serializer.cpp
src/node_b/: client_b.cpp
src/server/: server.cpp  session.cpp
tests/: CMakeLists.txt  test_client_a.cpp  test_client_b.cpp  test_error_type.cpp  test_logger.cpp  test_packet.cpp  test_sensor_emulator.cpp  test_serializer.cpp
